# DT-Management-System

./: .gitignore  BaseModels.py  PharmacyManagmentSystem.sln  Program.cs  README.md  app.py  db.py  drugs.txt  requirements.txt
OldVersion/: notes.txt
OldVersion/pharmacy_management_testing/src/: main.rs
OldVersion/tauri-app/: package-lock.json
OldVersion/tauri-app/src/: AddExistingItem.html  ListItems.html  RemoveItem.html  WithdrawItem.html  index.html  main.rs
OldVersion/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
PharmacyManagmentSystem/: Program.cs  drugs.txt
db/: DTItems.db
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
pharmacy_management_system_tauri/: package-lock.json  package.json
pharmacy_management_system_tauri/src-tauri/: Cargo.toml  tauri.conf.json
pharmacy_management_testing/: Cargo.toml
pharmacy_management_testing/src/: drugs.txt  main.rs
tauri-app/: package-lock.json  package.json
tauri-app/src/: AddItem.html  index.html  style.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
ui/: AddExistingItem.html  AddItem.html  ChangeLocation.html  ListItems.html  RemoveItem.html  SearchByID.html  SearchByName.html  WithdrawItem.html  index.html  login.html
ui/AddExistingItem/: AddExistingItem.js
ui/ChangeLocation/: ChangeLocation.js
ui/ListItem/: ListItem.css  ListItems.js
ui/Login/: Login.js
ui/RemoveItem/: RemoveItem.js
ui/SearchByID/: index.css  index.js
ui/SearchByName/: index.js
ui/WithdrawItem/: WithdrawItem.js
ui/login/: login.js
(+11 files in other folders)
